Changes in 1.1rc1:
- Fix bug in UPnP so that it works properly with D-Link DIR 635 routers
- Fix crash due to manipulating timers in the wrong thread (261903)
- Fix compiler warning in TimeEstimator (262618)

Changes in 1.1beta1:
- Use UTF-8 as default codec in bt::Value::toString
- Make sure that SIGBUS signals caused by failed mmapped IO are dealt with properly (241598)
- Move UPnP library from ktorrent/libktupnp to libktorrent
- Add support for superseeding (171661)
- Add command line example ktcli showing how to use libktorrent
- Add TransportProtocol field to Peer::Stats
- Fix crash due to missing reset of Poll object in DHT listening thread (243603)
- Ensure that libktorrent works properly with bindv6only flag on (238688)
- Ensure that torrent names are not interpreted as directories (244418)
- Fix crash when cleaning up PeerConnectors (245796)
- Fix crash on exit when cleaning up UPnP requests
- UPnPRouter now retrieves the external IP of the router
- Fix bug causing error message not to show rich text (247680)
- Use libgcrypt for RC4 implementation
- Use smart pointers for mse::StreamSocket (246693)
- Make sure that data checking fails if files cannot be opened when the maximum file limit is reached
- Add methods to get the current upload and download rate limit
- Fix deadlock in µTP code caused by interlocking mutexes
- Make sure MoveDataFilesJob properly emits signals so ktorrent can show a progress dialog (255369)
- Revamp PieceData management, fixes a crash (247984)
- Add support for warning message parameter in tracker replies
- Make sure connection setup slots are distributed fairly to avoid starvation
- Use weak pointers in PeerConnector and Authenticate (257126)
- When a webseed has 3 connection failures, wait 30 seconds and try again instead of not using it anymore (258210)
- Fix crash in PeerConnector cleanup (258878)
- Queue data checks so that they run one after the other (215711)
- Revamp UTP code with smart pointers